--- a/index.html
+++ b/index.html
@@ -3,19 +3,79 @@
 <head>
    <meta charset="UTF-8">
    <title>Monk's Cafe</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-   <h1>Monk's Cafe</h1>
-   <h2>"The Coffee Shop"</h2>
-   <img src="http://circuits-assets.generalassemb.ly/prod/asset/5474/jerry.jpg" />
-   <h2>Reservations</h2>
-   <h3>Make a Reservation</h3>
-   	<form>
-    	<p>Name:</p> <input type="text" name="name" id="reservationName" />
-        <p>Day:</p> <input type="date" id="reservationDate" />
-        <button type="button" value="Submit"> Confirm Reservation</button>
-    </form>
-    <h3>Existing Reservations</h3>
+<body data-spy="scroll" data-target=".navbar-inverse" data-offset="50">
+
+
+<script id="reservation-template" type="text/x-handlebars-template">
+    <tr>
+      <td>{{name}}</td>
+      <td>{{day}}</td>
+    </tr>
+  </script>
+<!--nav bar stuff from starter code-->
+
+  <div id="navbar" class="navbar-collapse navbar-inverse collapse navbar-fixed-top">
+    <a href="#" class="navbar-brand">Monk's Café</a>
+    <ul class="nav navbar-nav navbar-right">
+      <li class="active"><a href="#reservation">Reservation</a></li>
+      <li><a href="#map">Map</a></li>
+    </ul>
+  </div>
+
+  <div class="container-fluid restaurant-pic">
+    <div class="row">
+      <div class="col-md-12"></div>
+    </div>
+  </div>
+
+  <div id="reservation" class="container-fluid reservation">
+
+   <h1>"Don't forget to make a booking! Click me to slide up"</h1>
+
+    <!-- reservation form -->   
+<div class="row reservation-form-container">
+      <div class="col-md-12 text-center reservation-form">
+        <form class="form-inline reservations">
+          <div class="form-group">
+            <input type="text" class="form-control reservation-name" placeholder="Axl Rose">
+          </div>
+          <div class="form-group">
+            <div class="dropdown">
+              <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+                Select A Day
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu reservation-day">
+                <li><a>Today</a></li>
+                <li><a>Tomorrow</a></li>
+                <li><a>The day after next</a></li>
+              </ul>
+            </div>
+          </div>
+          <button class="btn btn-default reservation-button">Set Reservation</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- reservations -->
+    <table class="table table-striped col-md-12 container-fluid">
+      <h4>Reservations</h4>
+      <thead>
+        <th>Name</th>
+        <th>Day</th>
+      </thead>
+      <tbody class="reservation-list"></tbody>
+    </table>
+  </div>
+
+  <div id="map" class="container-fluid restaurant-locator">
+  </div>
+
+    <h2>Existing Reservations</h2>
     	<table>
 		<thead>
 			<th>Name</th>
@@ -26,20 +86,20 @@
 
     <h2>Come Dine with Us</h2>
     <div id="map"></div>
-    <script>
-      var map;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: 40.8054491, lng: -73.9654415}
-        });
-      }
-    </script>
- 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6C6vQqE-AY3WSkWSXPPYxc8G2AwJxruw&callback=initMap"
-  type="text/javascript"></script>
-    <h3>Customer Reviews</h3>
+  
+    <h3>Customer Reviews - Click here to hide</h3>
     	<p>“Big lettuce, big carrots, tomatoes like volleyballs."— Jerry Seinfeld, on The BIG Salad</p>
-
+ <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
+  <!--jQuery-->
    <script src="js/jquery-3.2.1.js"></script>
+     <!-- bootstrap js -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <!-- handlebars -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+  <!-- custom js -->
    <script src="js/main.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6C6vQqE-AY3WSkWSXPPYxc8G2AwJxruw&callback=initMap"
+  type="text/javascript"></script>
 </body>
 </html>
